<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip" >
    <TextView
        android:id="@+id/h1_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_alignParentTop="true" />
    <LinearLayout 
        android:id="@+id/cover_image_holder"
        android:layout_below="@+id/h1_holder"
        android:layout_width="fill_parent"
        android:layout_height="150dip"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10px"
            android:scaleType="fitXY"
            android:src="@drawable/empty_image" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/encryption_details_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cover_image_holder"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/encryption_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encryption_activate" />

    	<Button
    	    android:id="@+id/encryption_change"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/encryption_change"
    	    android:layout_gravity="right"
    	    android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView
        android:id="@+id/add_message_prompt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/encryption_details_holder"
        android:text="@string/add_message_prompt" />
    <EditText
        android:id="@+id/stego_message_holder"
        android:layout_width="fill_parent"
        android:layout_height="75dip"
        android:layout_below="@+id/add_message_prompt" />
    <LinearLayout
        android:id="@+id/stego_message_chars_left_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stego_message_holder"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/stego_message_chars_left"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="0" />
        <TextView
            android:layout_marginLeft="10dip"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/chars_left" />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/submit_holder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/submit_clear"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/submit_clear" />
        <Button
            android:id="@+id/submit_save"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/submit_save" />
    </LinearLayout>
</RelativeLayout>